sl2d (0.2.4~dev-1) unstable; urgency=low

  * New upstream release.
  * Added myself as uploader.

 -- Nicolas Noirbent <nicolas.noirbent@smartjog.com>  Wed, 20 May 2009 14:47:01 +0200

sl2d (0.2.3-1) unstable; urgency=low

  * New upstream release.

 -- Gilles Dartiguelongue <gdartigu@smartjog.com>  Wed, 06 May 2009 18:32:28 +0200

sl2d (0.2.2-1) unstable; urgency=low

  [ Gilles Dartiguelongue ]
  * New upstream release.

 -- Thomas Meson <thomas.meson@smartjog.com>  Mon, 04 May 2009 16:59:37 +0200

sl2d (0.2.1-1) unstable; urgency=low

  * New upstream release.

 -- Gilles Dartiguelongue <gdartigu@smartjog.com>  Thu, 09 Apr 2009 15:50:26 +0200

sl2d (0.2.0-1) unstable; urgency=low

  * New upstream release.

 -- Gilles Dartiguelongue <gdartigu@smartjog.com>  Fri, 20 Mar 2009 13:53:22 +0100

sl2d (0.1.0-1) unstable; urgency=low

  * Initial release. (Closes: #1514)

 -- Gilles Dartiguelongue <gdartigu@smartjog.com>  Mon, 02 Mar 2009 16:36:06 +0100