@@ -4,12 +4,3 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/utils.mk
-
-DEB_DESTDIR := $(CURDIR)/debian/tmp
-
-PYTHON_PACKAGES := sl2d
-
-$(patsubst %,binary-install/%,$(PYTHON_PACKAGES)) ::
-	dh_pycentral -p$(cdbs_curpkg)
-		-rmdir $(CURDIR)/debian/$(cdbs_curpkg)/usr/lib # Ugly hack, remove this when python-central >= 0.6.0 is on the build
