@@ -1,3 +1,0 @@
-debian/tmp/usr/bin
-debian/tmp/usr/share/sl2d
-debian/tmp/usr/share/man/man8/sl2d.8
