@@ -2,6 +2,7 @@ sl2d (0.2.4~dev-1) unstable; urgency=low
 
   * New upstream release.
   * Added myself as uploader.
+  * Clean up useless rules.
 
  -- Nicolas Noirbent <nicolas.noirbent@smartjog.com>  Wed, 20 May 2009 14:47:01 +0200
 
